tentando fazer os containers funcionar com rpc

--- a/jogador/Dockerfile
+++ b/jogador/Dockerfile
@@ -1,9 +1,9 @@
-FROM gradle:7-jdk17-alpine
+FROM gradle:jdk17-jammy
 
-COPY hello /hello
+COPY . /auditor
 
-WORKDIR /hello
+WORKDIR /auditor
 
 RUN gradle installDist
 
-CMD ["./app/build/install/app/bin/app"]
+CMD ["./build/install/jogador/bin/jogador"]
