mudanca na imagem do container, por erros da outra dist linux

--- a/auditor/Dockerfile
+++ b/auditor/Dockerfile
@@ -1,10 +1,9 @@
-FROM gradle:jdk17-jammy
+FROM gradle:jdk11-focal
 
 COPY . /auditor
 
 WORKDIR /auditor
 
-RUN ./gradlew installDist
-
+RUN gradle installDist
 
 CMD ["./build/install/auditor/bin/auditor"]
