--- a/Auditor/Dockerfile
+++ b/Auditor/Dockerfile
@@ -1,8 +1,14 @@
 FROM gradle:jdk11-focal
 
 ARG PORT
+ARG PLAYERS
+ARG FLAGS
+ARG MAP
 
 ENV PORT_NUMBER=${PORT}
+ENV PLAYERS=${PLAYERS}
+ENV FLAGS=${FLAGS}
+ENV MAP=${MAP}
 
 COPY . /Auditor
 
@@ -10,4 +16,4 @@ WORKDIR /Auditor
 
 RUN gradle installDist
 
-CMD .app/build/install/app/bin/app ${PORT_NUMBER}
+CMD ./app/build/install/app/bin/app ${PORT_NUMBER} ${PLAYERS} ${FLAGS} ${MAP}
