--- a/Jogador/Dockerfile
+++ b/Jogador/Dockerfile
@@ -1,8 +1,10 @@
 FROM gradle:jdk11-focal
 
 ARG NOME
+ARG PORT
 
 ENV NOME_JOGADOR=${NOME}
+ENV PORT_NUMBER=${PORT}
 
 COPY . /Jogador
 
@@ -10,4 +12,4 @@ WORKDIR /Jogador
 
 RUN gradle installDist
 
-CMD .app/build/install/app/bin/app ${NOME_JOGADOR}
+CMD ./app/build/install/app/bin/app ${NOME_JOGADOR} ${PORT_NUMBER}
