bem triste com container

--- a/Jogador/Dockerfile
+++ b/Jogador/Dockerfile
@@ -2,9 +2,11 @@ FROM gradle:jdk11-focal
 
 ARG NOME
 ARG PORT
+ARG IP_SERVER
 
 ENV NOME_JOGADOR=${NOME}
 ENV PORT_NUMBER=${PORT}
+ENV SERVER=${IP_SERVER}}
 
 COPY . /Jogador
 
@@ -12,4 +14,4 @@ WORKDIR /Jogador
 
 RUN gradle installDist
 
-CMD ./app/build/install/app/bin/app ${NOME_JOGADOR} ${PORT_NUMBER}
+CMD ./app/build/install/app/bin/app ${NOME_JOGADOR} ${SERVER} ${PORT_NUMBER}
