--- a/Jogador/Dockerfile
+++ b/Jogador/Dockerfile
@@ -6,7 +6,7 @@ ARG IP_SERVER
 
 ENV NOME_JOGADOR=${NOME}
 ENV PORT_NUMBER=${PORT}
-ENV SERVER=${IP_SERVER}}
+ENV SERVER=${IP_SERVER}
 
 COPY . /Jogador
 
